generic NPC templates
Kämpfer 4-12
Schurke 4-12
Kleriker 4-12
Magier 4-12

--- a/mod/itp/creaturepalcus.itp.yml
+++ b/mod/itp/creaturepalcus.itp.yml
@@ -3789,6 +3789,78 @@ MAIN:
             RESREF: {type: :resref, value: gabel_frommholz}
           - !nwn-lib.elv.es,2008-12/struct 
             __struct_id: 0
+            CR: {type: :float, value: 10.0}
+            FACTION: {type: :cexostr, value: Commoner}
+            NAME: {type: :cexostr, value: Generic Cleric lvl 12}
+            RESREF: {type: :resref, value: genericcleric002}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            CR: {type: :float, value: 3.0}
+            FACTION: {type: :cexostr, value: Commoner}
+            NAME: {type: :cexostr, value: Generic Cleric lvl 4}
+            RESREF: {type: :resref, value: genericclericlvl}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            CR: {type: :float, value: 7.0}
+            FACTION: {type: :cexostr, value: Commoner}
+            NAME: {type: :cexostr, value: Generic Cleric lvl 8}
+            RESREF: {type: :resref, value: genericcleric001}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            CR: {type: :float, value: 15.0}
+            FACTION: {type: :cexostr, value: Commoner}
+            NAME: {type: :cexostr, value: Generic Fighter lvl 12}
+            RESREF: {type: :resref, value: genericfighte002}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            CR: {type: :float, value: 5.0}
+            FACTION: {type: :cexostr, value: Commoner}
+            NAME: {type: :cexostr, value: Generic Fighter lvl 4}
+            RESREF: {type: :resref, value: genericfighterlv}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            CR: {type: :float, value: 15.0}
+            FACTION: {type: :cexostr, value: Commoner}
+            NAME: {type: :cexostr, value: Generic Fighter lvl 8}
+            RESREF: {type: :resref, value: genericfighte001}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            CR: {type: :float, value: 9.0}
+            FACTION: {type: :cexostr, value: Commoner}
+            NAME: {type: :cexostr, value: Generic Rouge lvl 12}
+            RESREF: {type: :resref, value: genericrougel002}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            CR: {type: :float, value: 3.0}
+            FACTION: {type: :cexostr, value: Commoner}
+            NAME: {type: :cexostr, value: Generic Rouge lvl 4}
+            RESREF: {type: :resref, value: genericrougelvl4}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            CR: {type: :float, value: 6.0}
+            FACTION: {type: :cexostr, value: Commoner}
+            NAME: {type: :cexostr, value: Generic Rouge lvl 8}
+            RESREF: {type: :resref, value: genericrougel001}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            CR: {type: :float, value: 9.0}
+            FACTION: {type: :cexostr, value: Commoner}
+            NAME: {type: :cexostr, value: Generic Wizard lvl 12}
+            RESREF: {type: :resref, value: genericwizard002}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            CR: {type: :float, value: 3.0}
+            FACTION: {type: :cexostr, value: Commoner}
+            NAME: {type: :cexostr, value: Generic Wizard lvl 4}
+            RESREF: {type: :resref, value: genericwizardlvl}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            CR: {type: :float, value: 6.0}
+            FACTION: {type: :cexostr, value: Commoner}
+            NAME: {type: :cexostr, value: Generic Wizard lvl 8}
+            RESREF: {type: :resref, value: genericwizard001}
+          - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
             CR: {type: :float, value: 1.0}
             FACTION: {type: :cexostr, value: Commoner}
             NAME: {type: :cexostr, value: Gerda}
