tlk: fix Makefile

--- a/tlk/Makefile
+++ b/tlk/Makefile
@@ -1,25 +1,9 @@
-# Set as environment var!
-# NWNHOME=/home/elven/nwn
-
 targets := $(basename $(wildcard *.tlk.source))
 
-all: path $(targets)
-
-path:
-ifeq  "$(NWNHOME)" ""
-	@echo "env var NWNHOME not set."
-	exit 1
-endif
-
+all: $(targets)
 
 clean:
 	-rm *.tlk
 
 %.tlk : %.tlk.source
 	tlkencode.pl -o $@ $<
-
-install: $(targets)
-	@cp -v $(targets) $(NWNHOME)/tlk/
-
-publish: $(targets)
-	rsync -Pzva --chmod=go+r $(targets) silbermarken@miyeritar:rsync/nwn/tlk/
