build system: fix clean/show-stale

--- a/mod/area/Makefile
+++ b/mod/area/Makefile
@@ -1,7 +1,7 @@
 include ../Makefile.resource
 
 minimaps:
-	@create-minimap.sh $(addprefix -hak $(NWNHOME)/hak/, $(addsuffix .hak, $(shell nwn-dsl get_haks.rb ../mod/module.ifo.yml))) *.are
+	@create-minimap.sh $(addprefix -hak $(NWNHOME)/hak/, $(addsuffix .hak, $(shell nwn-dsl ../tools/get_haks.rb ../mod/module.ifo.yml))) *.are
 
 clean-minimaps:
 	-@rm *.png
