--- a/mod/itp/creaturepalcus.itp.yml
+++ b/mod/itp/creaturepalcus.itp.yml
@@ -3657,6 +3657,12 @@ MAIN:
             RESREF: {type: :resref, value: et_baran}
           - !nwn-lib.elv.es,2008-12/struct 
             __struct_id: 0
+            CR: {type: :float, value: 7.0}
+            FACTION: {type: :cexostr, value: Commoner}
+            NAME: {type: :cexostr, value: Bathan}
+            RESREF: {type: :resref, value: vogelflug_bathan}
+          - !nwn-lib.elv.es,2008-12/struct
+            __struct_id: 0
             CR: {type: :float, value: 1.0}
             FACTION: {type: :cexostr, value: Commoner}
             NAME: {type: :cexostr, value: Bauer}
@@ -4137,6 +4143,12 @@ MAIN:
             RESREF: {type: :resref, value: magarethe}
           - !nwn-lib.elv.es,2008-12/struct 
             __struct_id: 0
+            CR: {type: :float, value: 11.0}
+            FACTION: {type: :cexostr, value: Commoner}
+            NAME: {type: :cexostr, value: Malduin}
+            RESREF: {type: :resref, value: vogelflug_maldui}
+          - !nwn-lib.elv.es,2008-12/struct
+            __struct_id: 0
             CR: {type: :float, value: 27.0}
             FACTION: {type: :cexostr, value: Zhentarim}
             NAME: {type: :cexostr, value: Manshoon}
@@ -4184,6 +4196,12 @@ MAIN:
             NAME: {type: :cexostr, value: Nathal}
             RESREF: {type: :resref, value: nathal}
           - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            CR: {type: :float, value: 10.0}
+            FACTION: {type: :cexostr, value: Commoner}
+            NAME: {type: :cexostr, value: Neoma}
+            RESREF: {type: :resref, value: vogelflug_neoma}
+          - !nwn-lib.elv.es,2008-12/struct
             __struct_id: 0
             CR: {type: :float, value: 12.0}
             FACTION: {type: :cexostr, value: Shadovar}
@@ -4484,6 +4502,18 @@ MAIN:
             NAME: {type: :cexostr, value: "Yagoda "}
             RESREF: {type: :resref, value: gabel_stiefelein}
           - !nwn-lib.elv.es,2008-12/struct 
+            __struct_id: 0
+            CR: {type: :float, value: 5.0}
+            FACTION: {type: :cexostr, value: Commoner}
+            NAME: {type: :cexostr, value: Yasheira}
+            RESREF: {type: :resref, value: vogelflug_yash}
+          - !nwn-lib.elv.es,2008-12/struct
+            __struct_id: 0
+            CR: {type: :float, value: 8.0}
+            FACTION: {type: :cexostr, value: Commoner}
+            NAME: {type: :cexostr, value: "Yasir "}
+            RESREF: {type: :resref, value: vogelflug_yasir}
+          - !nwn-lib.elv.es,2008-12/struct
             __struct_id: 0
             CR: {type: :float, value: 6.0}
             FACTION: {type: :cexostr, value: Hostile}
