generic templates: Rouge -> Rogue

--- a/mod/utc/genericrougel001.utc.yml
+++ b/mod/utc/genericrougel001.utc.yml
@@ -81,7 +81,7 @@ FeatList:
 FirstName: 
   type: :cexolocstr
   value: 
-    0: Generic Rouge lvl 8
+    0: Generic Rogue lvl 8
 Gender: {type: :byte, value: 0}
 GoodEvil: {type: :byte, value: 50}
 HitPoints: {type: :short, value: 30}
