--- a/mod/utc/genericrougel002.utc.yml
+++ b/mod/utc/genericrougel002.utc.yml
@@ -85,7 +85,7 @@ FeatList:
 FirstName: 
   type: :cexolocstr
   value: 
-    0: Generic Rouge lvl 12
+    0: Generic Rogue lvl 12
 Gender: {type: :byte, value: 0}
 GoodEvil: {type: :byte, value: 50}
 HitPoints: {type: :short, value: 44}
