--- a/mod/itp/creaturepalcus.itp.yml
+++ b/mod/itp/creaturepalcus.itp.yml
@@ -3833,19 +3833,19 @@ MAIN:
             __struct_id: 0
             CR: {type: :float, value: 9.0}
             FACTION: {type: :cexostr, value: Commoner}
-            NAME: {type: :cexostr, value: Generic Rouge lvl 12}
+            NAME: {type: :cexostr, value: Generic Rogue lvl 12}
             RESREF: {type: :resref, value: genericrougel002}
           - !nwn-lib.elv.es,2008-12/struct 
             __struct_id: 0
             CR: {type: :float, value: 3.0}
             FACTION: {type: :cexostr, value: Commoner}
-            NAME: {type: :cexostr, value: Generic Rouge lvl 4}
+            NAME: {type: :cexostr, value: Generic Rogue lvl 4}
             RESREF: {type: :resref, value: genericrougelvl4}
           - !nwn-lib.elv.es,2008-12/struct 
             __struct_id: 0
             CR: {type: :float, value: 6.0}
             FACTION: {type: :cexostr, value: Commoner}
-            NAME: {type: :cexostr, value: Generic Rouge lvl 8}
+            NAME: {type: :cexostr, value: Generic Rogue lvl 8}
             RESREF: {type: :resref, value: genericrougel001}
           - !nwn-lib.elv.es,2008-12/struct 
             __struct_id: 0
