--- a/mod/utc/genericrougelvl4.utc.yml
+++ b/mod/utc/genericrougelvl4.utc.yml
@@ -78,7 +78,7 @@ FeatList:
 FirstName: 
   type: :cexolocstr
   value: 
-    0: Generic Rouge lvl 4
+    0: Generic Rogue lvl 4
 Gender: {type: :byte, value: 0}
 GoodEvil: {type: :byte, value: 50}
 HitPoints: {type: :short, value: 16}
