--- a/mod/area/gabel_gruft.git.yml
+++ b/mod/area/gabel_gruft.git.yml
@@ -37,7 +37,7 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 0}
+    GenericType_New: {type: :dword, value: 0}
     HP: {type: :short, value: 80}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
@@ -99,7 +99,7 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 0}
+    GenericType_New: {type: :dword, value: 0}
     HP: {type: :short, value: 80}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
@@ -162,7 +162,7 @@ Door List:
     DisarmDC: {type: :byte, value: 20}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 28}
-    GenericType: {type: :byte, value: 235}
+    GenericType_New: {type: :dword, value: 235}
     HP: {type: :short, value: 60}
     Hardness: {type: :byte, value: 8}
     Interruptable: {type: :byte, value: 1}
@@ -213,7 +213,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 60}
@@ -225,7 +225,7 @@ Door List:
     DisarmDC: {type: :byte, value: 20}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 28}
-    GenericType: {type: :byte, value: 236}
+    GenericType_New: {type: :dword, value: 236}
     HP: {type: :short, value: 60}
     Hardness: {type: :byte, value: 8}
     Interruptable: {type: :byte, value: 1}
@@ -288,7 +288,7 @@ Door List:
     DisarmDC: {type: :byte, value: 20}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 28}
-    GenericType: {type: :byte, value: 232}
+    GenericType_New: {type: :dword, value: 232}
     HP: {type: :short, value: 60}
     Hardness: {type: :byte, value: 8}
     Interruptable: {type: :byte, value: 1}
@@ -339,7 +339,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 60}
@@ -351,7 +351,7 @@ Door List:
     DisarmDC: {type: :byte, value: 20}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 28}
-    GenericType: {type: :byte, value: 220}
+    GenericType_New: {type: :dword, value: 220}
     HP: {type: :short, value: 60}
     Hardness: {type: :byte, value: 8}
     Interruptable: {type: :byte, value: 1}
@@ -402,7 +402,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 60}
@@ -414,7 +414,7 @@ Door List:
     DisarmDC: {type: :byte, value: 28}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 28}
-    GenericType: {type: :byte, value: 7}
+    GenericType_New: {type: :dword, value: 7}
     HP: {type: :short, value: 60}
     Hardness: {type: :byte, value: 8}
     Interruptable: {type: :byte, value: 1}
@@ -465,7 +465,7 @@ Door List:
     AnimationState: {type: :byte, value: 1}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 30}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 60}
@@ -477,13 +477,13 @@ Door List:
     DisarmDC: {type: :byte, value: 20}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 25}
-    GenericType: {type: :byte, value: 2}
+    GenericType_New: {type: :dword, value: 2}
     HP: {type: :short, value: 60}
     Hardness: {type: :byte, value: 10}
     Interruptable: {type: :byte, value: 1}
     KeyName: {type: :cexostr, value: ""}
     KeyRequired: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: gabel_sued_to_gruft}
+    LinkedTo: {type: :cexostr, value: gabel_friedhof_2_gabel_gruften}
     LinkedToFlags: {type: :byte, value: 1}
     LoadScreenID: {type: :word, value: 0}
     LocName: 
@@ -528,7 +528,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 60}
@@ -540,7 +540,7 @@ Door List:
     DisarmDC: {type: :byte, value: 20}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 25}
-    GenericType: {type: :byte, value: 2}
+    GenericType_New: {type: :dword, value: 2}
     HP: {type: :short, value: 60}
     Hardness: {type: :byte, value: 10}
     Interruptable: {type: :byte, value: 1}
@@ -604,7 +604,7 @@ Door List:
     DisarmDC: {type: :byte, value: 20}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 25}
-    GenericType: {type: :byte, value: 2}
+    GenericType_New: {type: :dword, value: 2}
     HP: {type: :short, value: 60}
     Hardness: {type: :byte, value: 10}
     Interruptable: {type: :byte, value: 1}
@@ -922,7 +922,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 473}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -2222,7 +2222,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 473}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -8294,7 +8294,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 77}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -9940,7 +9940,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 21}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -10003,7 +10003,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 21}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -14805,7 +14805,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 429}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -14870,7 +14870,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 429}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -15124,7 +15124,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 21}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -15512,7 +15512,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 65}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -15577,7 +15577,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 65}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -15963,7 +15963,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 1424}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
