--- a/mod/area/gabel_gruften_b.are.yml
+++ b/mod/area/gabel_gruften_b.are.yml
@@ -28,7 +28,7 @@ MoonShadows: {type: :byte, value: 0}
 Name: 
   type: :cexolocstr
   value: 
-    0: An der Gabel - Gruften - Unterbau
+    0: Wildnis - Friedhof - Gruften - Unterbau
 NoRest: {type: :byte, value: 0}
 OnEnter: {type: :resref, value: sr_enter_inside}
 OnExit: {type: :resref, value: _area_leave}
