--- a/mod/area/gabel_gruften_b.git.yml
+++ b/mod/area/gabel_gruften_b.git.yml
@@ -37,7 +37,7 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 8}
+    GenericType_New: {type: :dword, value: 8}
     HP: {type: :short, value: 15}
     Hardness: {type: :byte, value: 20}
     Interruptable: {type: :byte, value: 1}
@@ -100,7 +100,7 @@ Door List:
     DisarmDC: {type: :byte, value: 20}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 25}
-    GenericType: {type: :byte, value: 2}
+    GenericType_New: {type: :dword, value: 2}
     HP: {type: :short, value: 60}
     Hardness: {type: :byte, value: 10}
     Interruptable: {type: :byte, value: 1}
@@ -163,7 +163,7 @@ Door List:
     DisarmDC: {type: :byte, value: 28}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 28}
-    GenericType: {type: :byte, value: 5}
+    GenericType_New: {type: :dword, value: 5}
     HP: {type: :short, value: 60}
     Hardness: {type: :byte, value: 10}
     Interruptable: {type: :byte, value: 1}
@@ -36676,7 +36676,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 186}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
